auto-test/tests/chapter_18/valid/extra_credit/semantic_analysis/union_self_pointer.c


union self_ptr {
    union self_ptr *ptr;
    long l;
};

int main(void) {
    union self_ptr u = {&u};
    if (&u != u.ptr) {
        return 1; 
    }
    return 0;
}