auto-test/tests/chapter_18/invalid_parse/extra_credit/union_empty_initializer.c


union u { int a; };

int main(void) {
    union u x = {};
}